--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,54 @@
-<h1>Diego Vargas</h1>
+<section class="homepage-car">
+    <h1>Welcome to CSE Motors!</h1>
+    <div class="picture-container">
+        <picture>
+            <source media="(max-width: 768px)" srcset="../images/vehicles/delorean-tn.jpg">
+            <img src="../images/vehicles/delorean.jpg" alt="car-delorean" loading="lazy">
+        </picture>
+    </div>
+    <div class="car-details">
+        <h2><span>DMC Delorean</span></h2>
+        <ul>
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <button id="cta-button">Own Today</button>
+    </div>
+</section>
+
+<div class="upgrades-reviews-row">
+    <section class="upgrades-section">
+        <h2>Delorean Upgrades</h2>
+        <div class="upgrades-grid">
+            <div class="upgrade-item">
+                <img src="../images/upgrades/flux-cap.png" alt="Flux Capacitor" loading="lazy">
+                <a href="#">Flux Capacitor</a>
+            </div>
+            <div class="upgrade-item">
+                <img src="../images/upgrades/flame.jpg" alt="Flame Decals" loading="lazy">
+                <a href="#">Flame Decals</a>
+            </div>
+            <div class="upgrade-item">
+                <img src="../images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers" loading="lazy">
+                <a href="#">Bumper Stickers</a>
+            </div>
+            <div class="upgrade-item">
+                <img src="../images/upgrades/hub-cap.jpg" alt="Hub Caps" loading="lazy">
+                <a href="#">Hub Caps</a>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="reviews-section">
+        <h2>DMC Delorean Reviews</h2>
+        <ul>
+            <li>"So fast it's almost traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and love it!" (5/5)</li>
+        </ul>
+    </div>
+</div>
