--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,21 @@
 <section class="homepage-car">
     <h1>Welcome to CSE Motors!</h1>
-    <div class="picture-container">
-        <picture>
-            <source media="(max-width: 720px)" srcset="../images/vehicles/delorean-tn.jpg">
-            <img src="../images/vehicles/delorean.jpg" alt="car-delorean" loading="lazy">
-        </picture>
-    </div>
-    <div class="car-details">
-        <h2><span>DMC Delorean</span></h2>
-        <ul>
-            <li>3 Cup holders</li>
-            <li>Superman doors</li>
-            <li>Fuzzy dice!</li>
-        </ul>
-        <button id="cta-button">Own Today</button>
-    </div>
+    <%- messages() %>
+        <div class="picture-container">
+            <picture>
+                <source media="(max-width: 720px)" srcset="../images/vehicles/delorean-tn.jpg">
+                <img src="../images/vehicles/delorean.jpg" alt="car-delorean" loading="lazy">
+            </picture>
+        </div>
+        <div class="car-details">
+            <h2><span>DMC Delorean</span></h2>
+            <ul>
+                <li>3 Cup holders</li>
+                <li>Superman doors</li>
+                <li>Fuzzy dice!</li>
+            </ul>
+            <button id="cta-button">Own Today</button>
+        </div>
 </section>
 
 <div class="upgrades-reviews-row">
