--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -333,6 +333,67 @@ nav li a {
   font-weight: bold;
 }
 
+/* Week 4 */
+
+form {
+  text-align: center;
+  background-color: #003366;
+  color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  width: 300px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 50px;
+}
+
+h1 {
+  text-align: left;
+}
+
+.error {
+  color: red;
+  text-align: center;
+}
+
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+}
+
+button {
+  background-color: white;
+  color: gray;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 50%;
+}
+
+button:hover {
+  background-color: lightgray;
+  color: black;
+}
+
+form p {
+  text-align: center;
+}
+
+a {
+  color: white;
+  text-align: center;
+  display: block;
+  margin-top: 10px;
+}
+
+
 /**************************/
 /******* Desktop View *****/
 /**************************/
@@ -455,4 +516,10 @@ nav li a {
     text-align: left;
     margin: 10px 0;
   }
+
+  /* Week 4 */
+  form {
+    width: 400px;
+  }
+
 }
