--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <title>
         <%= title %>
@@ -5,9 +8,9 @@
 </head>
 
 <body>
-        <main>
-            <%- vehicleDetailHtml %>
-        </main>
+    <main>
+        <%- vehicleDetailHtml %>
+    </main>
 </body>
 
 </html>
