--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,14 +1,10 @@
 <h1>
     <%= title %>
 </h1>
-<% if (messages.error) { %>
-    <div class="error">
-        <%= messages.error %>
-    </div>
-    <% } %>
-        <form action="/account/login" method="POST">
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <p>Don't have an account?</p> <a href="/account/register">Sign-up</a>
-        </form>
+<%- messages() %>
+    <form class="login-form" action="/account/login" method="POST">
+        <input type="email" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+        <p>Don't have an account?</p> <a href="/account/register">Sign-up</a>
+    </form>
