--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -3,8 +3,25 @@
 </h1>
 <%- messages() %>
     <form class="login-form" action="/account/login" method="POST">
-        <input type="email" name="email" placeholder="Email" required>
-        <input type="password" name="password" placeholder="Password" required>
+        <input type="email" name="account_email" placeholder="Email" required>
+        <input type="password" name="account_password" id="password" placeholder="Password" required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+        <div class="password-requirements">
+            <p>Password must be at least 12 characters long, contain at least:</p>
+            <ul>
+                <li>1 capital letter</li>
+                <li>1 number</li>
+                <li>1 special character</li>
+            </ul>
+        </div>
+
+        <span class="button" id="pswdBtn">Show Password</span>
+
         <button type="submit">Login</button>
-        <p>Don't have an account?</p> <a href="/account/register">Sign-up</a>
+
+        <div class="account-register">
+            <p>No account?</p> <a href="/account/register">Sign-up</a>
+        </div>
+
+        <script src="/js/togglePassword.js"></script>
     </form>
