--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -2,19 +2,36 @@
     <%= title %>
 </h1>
 <%- messages() %>
-    <form class="register-form" action="/account/register" method="post">
-        <input type="text" name="account_firstname" placeholder="First Name" required>
-        <input type="text" name="account_lastname" placeholder="Last Name" required>
-        <input type="email" name="account_email" placeholder="Email" required>
-        <input type="password" name="account_password" id="password" placeholder="Password" required>
+    <% if (errors) { %>
+        <ul class="notice">
+            <% errors.array().forEach(error=> { %>
+                <li>
+                    <%= error.msg %>
+                </li>
+                <% }) %>
+        </ul>
+        <% } %>
+            <form class="register-form" action="/account/register" method="post">
+                <input type="text" name="account_firstname" placeholder="First Name" required>
+                <input type="text" name="account_lastname" placeholder="Last Name" required>
+                <input type="email" name="account_email" placeholder="Email" required>
+                <input type="password" name="account_password" id="password" placeholder="Password" required
+                    pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+                <div class="password-requirements">
+                    <p>Password must be at least 12 characters long, contain at least:</p>
+                    <ul>
+                        <li>1 capital letter</li>
+                        <li>1 number</li>
+                        <li>1 special character</li>
+                    </ul>
+                </div>
 
-        <span class="button" id="pswdBtn">Show Password</span>
+                <span class="button" id="pswdBtn">Show Password</span>
 
-        <p>Password must be at least 12 characters, contain 1 capital letter, 1 number, and 1 special character.</p>
+                <button type="submit">Register</button>
+                <div class="account-register">
+                    <p>Already have an account?</p> <a href="/account/login">Login</a>
+                </div>
 
-        <button type="submit">Register</button>
-
-        <p>Already have an account?</p> <a href="/account/login">Login</a>
-
-        <script src="/js/togglePassword.js"></script>
-    </form>
+                <script src="/js/togglePassword.js"></script>
+            </form>
