--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -12,9 +12,12 @@
         </ul>
         <% } %>
             <form class="register-form" action="/account/register" method="post">
-                <input type="text" name="account_firstname" placeholder="First Name" required>
-                <input type="text" name="account_lastname" placeholder="Last Name" required>
-                <input type="email" name="account_email" placeholder="Email" required>
+                <input type="text" name="account_firstname" placeholder="First Name" required
+                    value="<%= locals.account_firstname %>">
+                <input type="text" name="account_lastname" placeholder="Last Name" required
+                    value="<%= locals.account_lastname %>">
+                <input type="email" name="account_email" placeholder="Email" required
+                    value="<%= locals.account_email %>">
                 <input type="password" name="account_password" id="password" placeholder="Password" required
                     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
                 <div class="password-requirements">
