--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -351,7 +351,9 @@ form {
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+input[type="number"],
+select {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
