--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -9,11 +9,11 @@
 
             <label for="inv_make">Make:</label>
             <input type="text" name="inv_make" id="inv_make" required minlength="3" pattern=".{3,}"
-                title="Make must be more than 3 characters" value="<%= inv_make || '' %>">
+                title="Make must be more than 3 characters" placeholder="Min of 3 characters" value="<%= inv_make || '' %>">
 
             <label for="inv_model">Model:</label>
             <input type="text" name="inv_model" id="inv_model" required minlength="3" pattern=".{3,}"
-                title="Model must be more than 3 characters" value="<%= inv_model || '' %>">
+                title="Model must be more than 3 characters" placeholder="Min of 3 characters" value="<%= inv_model || '' %>">
 
             <label for="inv_description">Description:</label>
             <input type="text" name="inv_description" id="inv_description" required
@@ -26,16 +26,13 @@
             <input type="text" name="inv_thumbnail" id="inv_thumbnail" value="/images/vehicles/no-image.png" required>
 
             <label for="inv_price">Price:</label>
-            <input type="number" name="inv_price" id="inv_price" required min="1" pattern="\d+"
-                title="Price must be a valid integer" value="<%= inv_price || '' %>">
+            <input type="number" name="inv_price" id="inv_price" required min="1" title="Price must be a valid integer" placeholder="decimal or integer" value="<%= inv_price || '' %>">
 
             <label for="inv_year">Year:</label>
-            <input type="number" name="inv_year" id="inv_year" required min="1900" max="2100" pattern="^\d{4}$"
-                title="Year must be between 1900 and 2100" value="<%= inv_year || '' %>">
+            <input type="number" name="inv_year" id="inv_year" required min="1900" max="2100" title="Year must be between 1900 and 2100" placeholder="4-digit year" value="<%= inv_year || '' %>">
 
             <label for="inv_miles">Miles:</label>
-            <input type="number" name="inv_miles" id="inv_miles" required min="1" pattern="\d+"
-                title="Miles must be a valid integer" value="<%= inv_miles || '' %>">
+            <input type="number" name="inv_miles" id="inv_miles" required min="1" title="Miles must be a valid integer" placeholder="digits only" value="<%= inv_miles || '' %>">
 
             <label for="inv_color">Color:</label>
             <input type="text" name="inv_color" id="inv_color" required value="<%= inv_color || '' %>">
