--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -12,9 +12,11 @@
         </ul>
         <% } %>
             <form class="login-form" action="/account/login" method="post">
-                <input type="email" name="account_email" placeholder="Email" required
+                <label for="account_email">Email:</label>
+                <input type="email" name="account_email" id="account_email" placeholder="Email" required
                     value="<%= locals.account_email %>">
-                <input type="password" name="account_password" id="password" placeholder="Password" required
+                <label for="account_password">Password:</label>
+                <input type="password" id="account_password" name="account_password" placeholder="Password" required
                     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
                 <div class="password-requirements">
                     <p>Password must be at least 12 characters long, contain at least:</p>
