--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -12,13 +12,17 @@
         </ul>
         <% } %>
             <form class="register-form" action="/account/register" method="post">
-                <input type="text" name="account_firstname" placeholder="First Name" required
+                <label for="account_firstname">First Name:</label>
+                <input type="text" name="account_firstname" id="account_firstname" placeholder="First Name" required
                     value="<%= locals.account_firstname %>">
-                <input type="text" name="account_lastname" placeholder="Last Name" required
+                <label for="account_lastname">Last Name:</label>
+                <input type="text" name="account_lastname" id="account_lastname" placeholder="Last Name" required
                     value="<%= locals.account_lastname %>">
-                <input type="email" name="account_email" placeholder="Email" required
+                <label for="account_email">Email:</label>
+                <input type="email" name="account_email" id="account_email" placeholder="Email" required
                     value="<%= locals.account_email %>">
-                <input type="password" name="account_password" id="password" placeholder="Password" required
+                <label for="account_password">Password:</label>
+                <input type="password" name="account_password" id="account_password" placeholder="Password" required
                     pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
                 <div class="password-requirements">
                     <p>Password must be at least 12 characters long, contain at least:</p>
