--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <section class="homepage-car">
     <h1>Welcome to CSE Motors!</h1>
-    <%- messages() %>
+    <%# messages() %>
         <div class="picture-container">
             <picture>
                 <source media="(max-width: 720px)" srcset="../images/vehicles/delorean-tn.jpg">
