Final Adding New Classifications and Vehicles

--- a/views/inventory/add-inventory.ejs
+++ b/views/inventory/add-inventory.ejs
@@ -19,7 +19,7 @@
                 value="<%= inv_model || '' %>">
 
             <label for="inv_description">Description:</label>
-            <input type="text" name="inv_description" id="inv_description" required
+            <input type="textarea" name="inv_description" id="inv_description" required
                 value="<%= inv_description || '' %>">
 
             <label for="inv_image">Image Path:</label>
