--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -350,6 +350,7 @@ form {
 }
 
 input[type="text"],
+input[type="textarea"],
 input[type="email"],
 input[type="password"],
 input[type="number"],
@@ -359,6 +360,20 @@ select {
   margin-bottom: 10px;
   border: none;
   border-radius: 4px;
+}
+
+#inv_description {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 1.5;
+  background-color: #f1f1f1;
+  min-height: 100px;
+  resize: vertical;
 }
 
 button {
@@ -412,6 +427,8 @@ button:hover {
   list-style-type: none;
   padding: 0 0 0 20px;
 }
+
+
 
 /* Specific styles for login form
 .login-form {
@@ -492,10 +509,6 @@ label {
   padding: 10px 0;
   font-style: italic;
   text-align: left;
-}
-
-#inv_description {
-  height: 100px;
 }
 
 /**************************/
