--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -3,9 +3,16 @@
 </h1>
 <%- messages() %>
 
-            <div class="vehicle-management">
-                <ul>
-                    <li><a href="/inv/add-classification">Add New Classification</a></li>
-                    <li><a href="/inv/add-inventory">Add New Vehicle</a></li>
-                </ul>
-            </div>
+    <div class="vehicle-management">
+        <ul>
+            <li><a href="/inv/add-classification">Add New Classification</a></li>
+            <li><a href="/inv/add-inventory">Add New Vehicle</a></li>
+        </ul>
+    </div>
+
+    <h2>Manage Inventory</h2>
+    <p>Choose a classification to see those inventory items.</p>
+    <%- classificationSelect %>
+        <table id="inventoryDisplay"></table>
+        <noscript>JavaScript must be enabled to use this page.</noscript>
+        <script src="../../js/inventory.js"></script>
