Commit small changes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     </span>
     <div id="tools">
         <% if (locals.isLoggedIn) { %>
-            <a href="/account/">Welcome <%= locals.userName %></a>
+            <a href="/account/management">Welcome <%= locals.userName %></a>
             <a href="/account/logout">Logout</a>
         <% } else { %>
             <a title="Click to log in" href="/account/login">MY ACCOUNT</a>
