Fixed Update Account form submission

--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -12,5 +12,5 @@
 <!-- Inventory Management (visible to Employee/Admin only) -->
 <% if (locals.userType === 'Employee' || locals.userType === 'Admin') { %>
     <h3>Inventory Management</h3>
-    <p><a href="/inv/">Manage Inventory</a></p>
+    <p><a href="/inv">Manage Inventory</a></p>
 <% } %>
