--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,13 @@
 <header id="top-header">
     <span class="siteName">
-        <a href="/" title="Return to home page">CSE Motors</a>
+        <a id="title-link" href="/" title="Return to home page">CSE Motors</a>
     </span>
     <div id="tools">
         <% if (locals.isLoggedIn) { %>
-            <a href="/account/">Welcome <%= locals.userName %></a>
-            <a href="/account/logout">Logout</a>
+            <a id="user-link" href="/account/">Welcome <%= locals.userName %></a>
+            <a id="logout-link" href="/account/logout">Logout</a>
         <% } else { %>
-            <a title="Click to log in" href="/account/login">MY ACCOUNT</a>
+            <a id="title-link" title="Click to log in" href="/account/login">MY ACCOUNT</a>
         <% } %>
     </div>
 </header>
