--- a/views/account/update.ejs
+++ b/views/account/update.ejs
@@ -42,7 +42,10 @@
 
     <input type="hidden" name="account_id" value="<%= locals.userId %>">
 
+    <span class="button" id="pswdBtn">Show Password</span>
+
     <button type="submit" disabled>Change Password</button>
 </form>
 
+<script src="/js/togglePassword.js"></script>
 <script src="/js/pswd-update.js"></script>
